Adjusted sizing on grids, and fixed alignment of the header section

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html, body {
 .container {
     display: grid;
     grid-template-columns: 1fr 4.5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 200px 10fr;
     height: 100%;
 }
 
@@ -63,7 +63,7 @@ html, body {
     grid-row: 1 / 2;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 100px);
 }
 
 .search-bar {
@@ -74,20 +74,34 @@ html, body {
     align-items: center;
 }
 
+#search {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 9fr;
+}
+
 .user-info {
     border: 1px solid red;
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     display: grid;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 1fr 7fr;
     grid-template-rows: repeat(2, 1fr);
+}
+
+.image{
+    grid-row: 1/3;
 }
 
 .buttons {
     border: 1px solid purple;
     grid-column: 2 / 3;
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
 }
+
+
 
 .main-content {
     border: 1px solid red;
@@ -117,4 +131,18 @@ html, body {
 
 #query {
     width: 80%;
+}
+
+.user-header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.action-buttons {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.action-buttons>button{
+    grid-row: 2;
 }
